css/styles.css
:root {
    --body_bgr: #FFFFFF;
    --main-color: #0000FF;
    --cloud: #F4F4FD;
    --small-radius: 4px;
    --iris:#4D5AE5;
    --lightslate: #8E8F99;
    --ocean:#404bbf;
    --grey: #2E2F42B2;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Reset */
h1,h2,h3,h4,h5,h6,p {
    margin: 0;
}
@media screen and (min-width: 500) {
  body  
}
ul, ol {
    margin: 0;
    padding: 0;
}

img{
    display: block;
}
.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

body{
    font-family: Roboto, sans-serif;
    color: #434455;
    background-color: var(--body_bgr);
}

.middle-header{
    font-weight: 700;
    font-size: 36px;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
    line-height: 1.11;
    text-transform: capitalize;  
    margin-bottom: 72px;
}
.small-header{
    font-weight: 500;
    font-size: 36px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
    margin-bottom: 8px;
}


.nav-link{
    position: relative;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #2E2F42;
    padding: 24px 0;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
}
.current {
    color: #404bbf;
}
.nav-link.current::after {
    position: absolute;
    content: "";
    display: block;
    height: 4px;
    width: 100%;
    left: 0;
    bottom: -3px;
    border-radius: 2px;
    background-color: #404BBF;
}
.nav-link:hover {
    color: #404BBF;
}

.nav-link:focus {
    color: #404BBF;    
}

.nav-contact{
    font-size: 16px;
    line-height: 24px;
    letter-spacing: 0.02em; 
    color: #434455;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
}

.nav-contact:focus{
    color: #404BBF;
}

.nav-contact:hover{
    color: #404BBF;
}

.address{
    font-style: normal;
}

.address-container{
    display: flex;
    align-items:center;
    justify-content: space-between;
    gap: 40px;
}
@media screen and (max-width:767px){
.address-container{
    display: none;
    }
}
@media screen and (max-width:1157px) {
    .address-container {
        flex-direction: column;
        gap: 12px;
    }
}
.mobile-menu-icon {
    stroke-width: 3px;
    stroke: var(--navyblue, #2E2F42);
    /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
}
@media screen and (min-width: 768px) {
 .menu-icon-container{
    display: none;
    }   
}


.section {
    padding-top: 48px;
    padding-bottom: 48px;
    /*
    padding-top: 60px;
    padding-bottom: 60px; */
}
@media only screen and (min-width: min-width:768px) {
 .section  {
    padding-top: 48px;
    padding-bottom: 48px;
  }
}
@media only screen and (min-width: min-width:1440px) {
    .section {
        padding-top: 60px;
        padding-bottom: 60px;
    }
}
.btn-hero{
    cursor: pointer;
    /* IRIS */
    background: #4D5AE5;
    font-family: inherit;
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0.04em;
    color: #FFFFFF;
    padding: 16px 32px;
    display: block;
    min-width: 169px;
    height: 56px;
    border: none;
    border-radius: 4px;
    margin: 0 auto 0 auto;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
}
.btn-hero:focus{
    background: #404BBF;
}
.btn-hero:hover{
    background: #404BBF;
   
}

.logo{
    font-family: 'Raleway', sans-serif;
    letter-spacing: 0.03em;
    font-weight: 800;
    font-size: 18px;
    line-height: 1.17;
    text-transform: uppercase;
    /* IRIS */
    color: #4D5AE5;     
    display: inline-block;
}

@media screen and (min-width: 768px)
{
    .logo {
        margin-right: 76px;
    }
}

.logo-second{
    color: #2E2F42; 
}

.link{
    text-decoration: none
}

.list{
    list-style: none
}

.hero-section{
    
    padding-top: 188px;
    padding-bottom: 188px;
    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
        url(../images/hero_image/people-office_mobile@1x.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    margin: 0 auto;
}

@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx){
    .hero-section{
    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
            url(../images/hero_image/people-office_mobile@2x.jpg);
    }
}

@media only screen and (min-width: 768px){
    .hero-section {
    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
            url(../images/hero_image/people-office_tablet@1x.jpg);
    }
    @media (min-device-pixel-ratio: 2),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
        .hero-section {
            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
                url(../images/hero_image/people-office_tablet@2x.jpg);
        }
    }
}


@media only screen and (min-width: 1158px) {
    .hero-section {
        max-width: 1440px;
        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
            url(../images/hero_image/people-office_desk@1x.jpg);
    }

    @media (min-device-pixel-ratio: 2),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
        .hero-section {
            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
                url(../images/hero_image/people-office_desk@2x.jpg);
        }
    }
}

@media (min-device-pixel-ratio: 2),
(min-resolution: 192dpi),
(min-resolution: 2dppx) {
    .hero-section {
        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
            url(../images/hero_image/people-office_tablet@2x.jpg);
    }
}
/* ... */

